--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@
 systemProp.sonar.host.url=http://sonar.dev.cwds.io:9000
 api.url=http://localhost:8080/
 perry.url=http://localhost:18080/
+login.form.target.url=http://localhost:18080/perry/login
