Added I18n GET by key prefix and language endpoint Added I18n GET by key prefix endpoint Added GET i18n for Instrument resource

--- a/build.gradle
+++ b/build.gradle
@@ -98,7 +98,8 @@ jacocoTestReport {
     afterEvaluate {
         classDirectories = files(classDirectories.files.collect {
             fileTree(dir: it, exclude: [
-                    'org/hibernate/*'
+                    'org/hibernate/*',
+                    "**/gov/ca/cwds/cans/Constants.java"
             ])
         })
     }
