Added db update mechanism, liquibase runs data scripts on application start

--- a/src/test/resources/config/cans-api.yml
+++ b/src/test/resources/config/cans-api.yml
@@ -44,6 +44,8 @@ cansDataSourceFactory:
       hibernate.id.new_generator_mappings: false
       hibernate.show_sql: true
 
+upgradeCansDbOnStart: false
+
 webSecurity:
   httpResponseSecurityHeaders:
     # Prevent MIMI sniffing
