--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,6 @@ bin/
 gradle/wrapper
 /gradle/
 /gradlew
+/tools/instrument-parser/npm_modules/
 /tools/instrument-parser/output/changelog.xml
 /tools/instrument-parser/output/assessment.json
