Rename person service

--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -14,15 +14,15 @@ services:
       - ${POSTGRES_PORT}:5432
     env_file: .env
 
-  cans-api:
-    image: cwds/cans-api
-    hostname: cans-api
-    depends_on:
-      postgres:
-        condition: service_started
-      perry:
-        condition: service_started
-    restart: on-failure
-    ports:
-      - ${CANS_API_PORT}:8080
-    env_file: .env
+#  cans-api:
+#    image: cwds/cans-api
+#    hostname: cans-api
+#    depends_on:
+#      postgres:
+#        condition: service_started
+#      perry:
+#        condition: service_started
+#    restart: on-failure
+#    ports:
+#      - ${CANS_API_PORT}:8080
+#    env_file: .env
