--- a/docker-tests/Dockerfile
+++ b/docker-tests/Dockerfile
@@ -1,9 +1,9 @@
 FROM cwds/javajdk
-RUN mkdir /opt/cans-api-tests
-ADD cans-api-tests.jar /opt/cans-api-tests/cans-api-tests.jar
-ADD resources /opt/cans-api-tests/resources
-ADD config /opt/cans-api-tests/config
-ADD entrypoint.sh /opt/cans-api-tests/
-RUN chmod +x /opt/cans-api-tests/entrypoint.sh
-WORKDIR /opt/cans-api-tests
-CMD ["/opt/cans-api-tests/entrypoint.sh"]
+RUN mkdir /opt/cans-api-test
+ADD cans-api-test.jar /opt/cans-api-test/cans-api-test.jar
+ADD resources /opt/cans-api-test/resources
+ADD config /opt/cans-api-test/config
+ADD entrypoint.sh /opt/cans-api-test/
+RUN chmod +x /opt/cans-api-test/entrypoint.sh
+WORKDIR /opt/cans-api-test
+CMD ["/opt/cans-api-test/entrypoint.sh"]
