--- a/config/cans-api.yml
+++ b/config/cans-api.yml
@@ -57,7 +57,7 @@ cansDataSourceFactory:
       hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
       hibernate.cache.use_query_cache: true
 
-upgradeCansDbOnStart: ${UPGRADE_CANS_DB_ON_START:-false}
+upgradeCansDbOnStart: ${UPGRADE_CANS_DB_ON_START:-true}
 populateDemoDataOnStart: ${POPULATE_DEMO_DATA_ON_START:-true}
 
 webSecurity:
