CANS-232. CANS Performance tests.  Create folder in advance for jmeter in docker image

--- a/docker-tests/Dockerfile
+++ b/docker-tests/Dockerfile
@@ -10,6 +10,7 @@ ENV JMETER_HOME /opt/apache-jmeter-4.0/
 RUN mkdir /opt/cans-api-perf-test
 ADD jmeter /opt/cans-api-perf-test
 ENV JMETER_TESTS /opt/cans-api-perf-test
+RUN mkdir $JMETER_TESTS/results && mkdir $JMETER_TESTS/results/api && mkdir $JMETER_TESTS/results/rails
 
 # Smoke & Functional
 RUN mkdir /opt/cans-api-test
