--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
   cans-api-test:
     image: cwds/cans-api-test
     hostname: cans-api-test
+    entrypoint: sleep infinity
     depends_on:
       - postgres
       - perry
