Add functional and performance tests to pull request jenkinsfile. Commit 15

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
   cans-api:
     image: cwds/cans-api
     hostname: cans-api
+    restart: on-failure
     depends_on:
       - postgres
       - perry
