CANS-291: Users Can Only Edit Assessments in their County (#64)
* init

* assessment permission check

* separate permission check

* in-memory unit tests

* unit tests

* unit tests

* unit tests

* sonar

* security resource unit tests

* security resource unit tests

* security resource unit tests

* security resource unit tests

* security resource unit tests

* security resource unit tests

* empty lines

* check by id

* check by id

* correct unit test name

* Remove redundant method

* unit test fix

* security resource fix

* unit test fixed after merge

--- a/config/shiro_v2.ini
+++ b/config/shiro_v2.ini
@@ -2,7 +2,8 @@
 [main]
 
 allowAllCredentialsMatcher = org.apache.shiro.authc.credential.AllowAllCredentialsMatcher
-
+globalPermissionResolver = gov.ca.cwds.security.permission.AbacPermissionResolver
+securityManager.authorizer.permissionResolver = $globalPermissionResolver
 # -------------
 # Perry Realm
 # -------------
