--- a/config/shiro_v2_docker_compose.ini
+++ b/config/shiro_v2_docker_compose.ini
@@ -1,6 +1,8 @@
 # Shiro
 [main]
 allowAllCredentialsMatcher = org.apache.shiro.authc.credential.AllowAllCredentialsMatcher
+globalPermissionResolver = gov.ca.cwds.security.permission.AbacPermissionResolver
+securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
 # -------------
 # Perry Realm
