--- a/build.gradle
+++ b/build.gradle
@@ -116,6 +116,7 @@ dependencies {
     compile group: 'gov.ca.cwds.api', name: 'legacy-data-access', version: coreApiVersion
     compile group: 'gov.ca.cwds.api', name: 'api-core-rest', version: coreApiVersion
     compile group: 'gov.ca.cwds.api', name: 'api-security', version: apiSecurityVersion
+    compile group: 'gov.ca.cwds.api', name: 'drools-engine', version: coreApiVersion
 
     compile group: 'io.dropwizard', name: 'dropwizard-core', version: dropwizardVersion
     compile group: 'io.dropwizard', name: 'dropwizard-hibernate', version: dropwizardVersion
@@ -135,6 +136,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:' + lombokVersion
 
     testCompile group: 'gov.ca.cwds.api', name: 'api-core-test-support', version: coreApiVersion
+    testCompile group: 'gov.ca.cwds.api', name:'api-security-test-support', version: apiSecurityVersion
     testCompile 'io.dropwizard:dropwizard-testing:' + dropwizardVersion
     testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
