--- a/src/test/resources/config/shiro-test.ini
+++ b/src/test/resources/config/shiro-test.ini
@@ -4,43 +4,11 @@ allowAllCredentialsMatcher = org.apache.shiro.authc.credential.AllowAllCredentia
 globalPermissionResolver = gov.ca.cwds.security.permission.AbacPermissionResolver
 securityManager.authorizer.permissionResolver = $globalPermissionResolver
 
-# -------------
-# Perry Realm
-# -------------
-perryRealm = gov.ca.cwds.security.realm.JwtRealm
-perryRealm.keyStorePath=config/enc.jceks
-perryRealm.keyStoreAlias=test
-perryRealm.keyStorePassword=test
-perryRealm.keyStoreKeyPassword=test
-perryRealm.tokenIssuer=perry
-perryRealm.headlessToken=true
+testRealm = gov.ca.cwds.security.test.TestRealm
+testRealm.credentialsMatcher = $allowAllCredentialsMatcher
 
-
-
-#encryption
-
-perryRealm.useEncryption=true
-perryRealm.encKeyAlias=enc128
-perryRealm.encKeyPassword=test
-perryRealm.encryptionMethod=A128GCM
-
-perryRealm.credentialsMatcher = $allowAllCredentialsMatcher
-
-# ------------------------------
-# Perry Authenticating Filter
-# ------------------------------
-perry = gov.ca.cwds.security.web.PerryAuthenticatingFilter
-
-noSession = org.apache.shiro.web.filter.session.NoSessionCreationFilter
-
-cacheManager = org.apache.shiro.cache.MemoryConstrainedCacheManager
-securityManager.cacheManager = $cacheManager
-securityManager.realm = $perryRealm
+securityManager.realm = $testRealm
+testSecurityFilter = gov.ca.cwds.security.test.TestSecurityFilter
 
 [urls]
-/system-information = noSession, anon
-/static/** = noSession, anon
-/swagger* = noSession, anon
-#/** = noSession, anon
-#enable security
-/** = noSession, perry
+/** = testSecurityFilter
