--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,8 @@ project.ext {
     projectMajorVersion = '0.9.1'
     coreApiVersion = '1.7.2_796-RC'
     apiSecurityVersion = '3.0.3_734-RC'
-    dataModelVersion = '0.8.4_648-RC'
+    //dataModelVersion = '0.8.4_648-RC'
+    dataModelVersion = '0.8.4-SNAPSHOT'
     dropwizardVersion = '1.1.0'
     mapstructVersion = '1.2.0.Final'
     lombokVersion = '1.16.18'
