CANS-336: Person mapping updated to include metadata based on user authorization rules (sealed and sensitive)

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ project.ext {
     projectDockerAppName = 'cans-api'
     mainClass = 'gov.ca.cwds.cans.CansApplication'
     projectMajorVersion = '0.9.2'
-    coreApiVersion = '1.7.2_796-RC'
+    coreApiVersion = '1.7.5_858-RC'
     apiSecurityVersion = '3.0.3_734-RC'
     dataModelVersion = '0.8.4_658-RC'
     dropwizardVersion = '1.1.0'
@@ -141,6 +141,8 @@ dependencies {
     testCompile group: 'org.skyscreamer', name: 'jsonassert', version: '1.5.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile 'org.mockito:mockito-core:2.0.54-beta'
+    testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '1.7.4'
+    testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '1.7.4'
     testCompile group: 'org.hamcrest', name: 'hamcrest-junit', version: '2.0.0.0'
     testCompile group: 'com.h2database', name: 'h2', version: '1.4.194'
     testCompile group: 'org.apache.velocity', name: 'velocity', version: '1.7'
