--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ buildscript {
 plugins {
     id "org.sonarqube" version "2.5"
     id 'net.ltgt.apt' version '0.9'
-    id "com.github.hierynomus.license" version "0.14.0"
+    id 'com.github.jk1.dependency-license-report' version '0.8'
 }
 
 project.logging.setLevelInternal(INFO)
@@ -296,5 +296,89 @@ publishing {
         maven {
             url artifactoryRepo
         }
+    }
+}
+
+licenseReport {
+    renderers = [new XmlReportRenderer(), new CwdsCsvReportRenderer(), new InventoryHtmlReportRenderer()]
+    excludeGroups = ['gov.ca.cwds.api.libs']
+}
+
+def licenceFolder = 'build/reports/dependency-license'
+task libLicenceFolders(type: Copy){
+    from licenceFolder
+    into 'legal/licenses'
+    exclude "index.html"
+    exclude "index.xml"
+    exclude "licenses.csv"
+}
+
+import com.github.jk1.license.render.*
+task libLicenseReportFiles(type: Copy){
+    from licenceFolder
+    into 'legal'
+    include "index.html"
+    include "index.xml"
+    include "licenses.csv"
+}
+
+task libLicenseReport(dependsOn:[generateLicenseReport, libLicenceFolders,
+                                 libLicenseReportFiles ] ){
+    println ("\n\n License files are generated in : ${licenceFolder}")
+}
+
+import com.github.jk1.license.ModuleData
+import com.github.jk1.license.ProjectData
+import com.github.jk1.license.LicenseReportExtension
+
+class CwdsCsvReportRenderer extends CsvReportRenderer {
+    @Override
+    void render(ProjectData data){
+        LicenseReportExtension config = data.project.licenseReport
+        File output = new File(config.outputDir, filename)
+        output.write('')
+
+        if (includeHeaderLine) {
+            output << header()
+        }
+
+        data.allDependencies.sort().each {
+            renderDependency(output, it)
+        }
+    }
+
+    CwdsCsvReportRenderer(String filename = 'licenses.csv') {
+        this.filename = filename
+    }
+
+    void renderDependency(File output, ModuleData data) {
+        output << line(data)
+    }
+
+    private String header(){
+        return "${quote('artifact')}$separator${quote('name')}$separator${quote('version')}$separator${quote('moduleUrl')}$separator${quote('moduleLicense')}$separator${quote('moduleLicenseUrl')}$separator${quote('projectUrl')}$separator$nl"
+    }
+
+    private String line(ModuleData data){
+        def (String moduleUrl, String moduleLicense, String moduleLicenseUrl) = LicenseDataCollector.singleModuleLicenseInfo(data)
+        String artifact = "${data.group}:${data.name}:${data.version}"
+        return "${quote(artifact)}$separator${quote(data.name)}$separator${quote(data.version)}$separator${quote(moduleUrl)}$separator${quote(moduleLicense)}$separator${quote(moduleLicenseUrl)}$separator${quote(projectUrl(data))}$separator$nl"
+    }
+
+    private String projectUrl(ModuleData data){
+        Set urls = new HashSet()
+        data.poms.each {
+            urls << it.projectUrl
+        }
+        urls.join(" ")
+    }
+
+    private String quote(String content) {
+        if (content == null || content.isEmpty()) {
+            return ''
+        }
+        content = content.trim()
+        content = content.replaceAll(quote, "\\\\$quote")
+        "${quote}${content}${quote}"
     }
 }
