CANS-468: performance test updated to support MFA (#94)
* CANS-468: add Chrome driver to Test Docker Image

* CANS-468: test updated with PROD_MFA mode

* CANS-468: test docker file fix

* CANS-468: test docker file fix

* CANS-468: performance test updated to use default values for local development environment

* CANS-468: performance test Docker file modified to install webdriver plugin

* CANS-468: performance test Docker file modified to install webdriver plugin

* CANS-468: performance test Docker file modified to install webdriver plugin

* CANS-468: readme updated for test image

* CANS-468: unused element removed from JMeter test

--- a/docker-tests/Dockerfile
+++ b/docker-tests/Dockerfile
@@ -1,12 +1,21 @@
 FROM cwds/javajdk
 
 # Performance tests
+RUN yum -y install curl
+RUN curl https://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip -o /usr/local/bin/chromedriver
+RUN chmod +x /usr/local/bin/chromedriver
 RUN yum -y install wget
 RUN cd /opt/ \
     && wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-4.0.tgz \
     && tar -xvzf apache-jmeter-4.0.tgz \
     && rm apache-jmeter-4.0.tgz
 ENV JMETER_HOME /opt/apache-jmeter-4.0/
+RUN cd /opt/apache-jmeter-4.0/lib/ext \
+    && wget -O jmeter-plugins-manager-1.3.jar http://search.maven.org/remotecontent?filepath=kg/apc/jmeter-plugins-manager/1.3/jmeter-plugins-manager-1.3.jar
+RUN java -cp /opt/apache-jmeter-4.0/lib/ext/jmeter-plugins-manager-1.3.jar org.jmeterplugins.repository.PluginManagerCMDInstaller
+RUN cd /opt/apache-jmeter-4.0/lib \
+    && wget -O cmdrunner-2.2.jar http://search.maven.org/remotecontent?filepath=kg/apc/cmdrunner/2.2/cmdrunner-2.2.jar
+RUN /opt/apache-jmeter-4.0/bin/PluginsManagerCMD.sh install jpgc-webdriver
 RUN mkdir /opt/cans-api-perf-test
 ADD jmeter /opt/cans-api-perf-test
 ENV JMETER_TESTS /opt/cans-api-perf-test
