--- a/config/cans-api.yml
+++ b/config/cans-api.yml
@@ -57,6 +57,24 @@ cansDataSourceFactory:
       hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
       hibernate.cache.use_query_cache: true
 
+cmsDataSourceFactory:
+  autoCommitByDefault: false
+  driverClass: com.ibm.db2.jcc.DB2Driver
+  user: ${DB_CMS_USER:-db2inst1}
+  password: ${DB_CMS_PASSWORD:-db2inst1}
+  url: ${DB_CMS_JDBC_URL:-jdbc:db2://localhost:50000/DB0TDEV}
+  validationQuery: "/* MyService Health Check */ SELECT 1 FROM sysibm.sysdummy1 for read only WITH UR"
+  logValidationErrors: true
+  initialSize: 0
+  minSize: 0
+  maxSize: ${DB_CMS_CP_MAX_SIZE:-8}
+  minIdleTime: 1 minute
+  properties:
+    hibernate.dialect: org.hibernate.dialect.DB2Dialect
+    hibernate.show_sql: false
+    hibernate.default_schema: ${DB_CMS_SCHEMA:-CWSINT}
+    hibernate.connection.autocommit: false
+
 upgradeCansDbOnStart: ${UPGRADE_CANS_DB_ON_START:-true}
 populateDemoDataOnStart: ${POPULATE_DEMO_DATA_ON_START:-true}
 
