--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,12 @@ services:
       DEV_MODE: ${DEV_MODE}
       LOG_LEVEL: ${LOG_LEVEL}
 
+  db2:
+    image: cwds/db2data
+    hostname: db2data
+    ports:
+      - ${DB_CMS_DB2_PORT}:${DB_CMS_DB2_PORT}
+
   postgres:
     image: cwds/postgresql_data:0.8.4_662-RC
     hostname: postgresql_data
@@ -37,6 +43,10 @@ services:
       DB_NS_SCHEMA: ${DB_NS_SCHEMA}
       DB_NS_USER: ${DB_NS_USER}
       DB_NS_PASSWORD: ${DB_NS_PASSWORD}
+      DB_CMS_JDBC_URL: ${DB_CMS_JDBC_URL}
+      DB_CMS_SCHEMA: ${DB_CMS_SCHEMA}
+      DB_CMS_USER: ${DB_CMS_USER}
+      DB_CMS_PASSWORD: ${DB_CMS_PASSWORD}
 
   cans-api-test:
     image: cwds/cans-api-test
