--- a/config/cans-api.yml
+++ b/config/cans-api.yml
@@ -61,8 +61,8 @@ cmsDataSourceFactory:
   autoCommitByDefault: false
   driverClass: com.ibm.db2.jcc.DB2Driver
   user: ${DB_CMS_USER:-db2inst1}
-  password: ${DB_CMS_PASSWORD:-db2inst1-pwd}
-  url: ${DB_CMS_JDBC_URL:-jdbc:db2://192.168.99.100:50000/DB0TDEV}
+  password: ${DB_CMS_PASSWORD:-db2inst1}
+  url: ${DB_CMS_JDBC_URL:-jdbc:db2://localhost:50000/DB0TDEV}
   validationQuery: "/* MyService Health Check */ SELECT 1 FROM sysibm.sysdummy1 for read only WITH UR"
   logValidationErrors: true
   initialSize: 0
@@ -71,8 +71,8 @@ cmsDataSourceFactory:
   minIdleTime: 1 minute
   properties:
     hibernate.dialect: org.hibernate.dialect.DB2Dialect
-    hibernate.show_sql: false
-    hibernate.default_schema: ${DB_CMS_SCHEMA:-CWSCMS}
+    hibernate.show_sql: true
+    hibernate.default_schema: ${DB_CMS_SCHEMA:-CWSINT}
     hibernate.connection.autocommit: false
 
 upgradeCansDbOnStart: ${UPGRADE_CANS_DB_ON_START:-true}
