CANS-432. Minor code clean

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: cwds/db2data
     hostname: db2data
     ports:
-      - ${DB_CMS_DB2_PORT}:${DB_CMS_DB2_PORT}
+      - ${DB_CMS_DB2_PORT}:50000
 
   postgres:
     image: cwds/postgresql_data:0.8.4_662-RC
