--- a/config/cans-api.yml
+++ b/config/cans-api.yml
@@ -71,7 +71,7 @@ cmsDataSourceFactory:
   minIdleTime: 1 minute
   properties:
     hibernate.dialect: org.hibernate.dialect.DB2Dialect
-    hibernate.show_sql: true
+    hibernate.show_sql: false
     hibernate.default_schema: ${DB_CMS_SCHEMA:-CWSINT}
     hibernate.connection.autocommit: false
 
