--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,12 @@ services:
   cans-api:
     image: cwds/cans-api
     hostname: cans-api
-    restart: on-failure
+    deploy:
+     restart_policy:
+       condition: on-failure
+       delay: 15s
+       max_attempts: 5
+       window: 120s
     depends_on:
       - postgres
       - perry
