Reduce functional tests coupling with demo data

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,8 @@ login.form.target.url=http://localhost:18080/perry/login
 #api.url=https://cans-api.dev.cwds.io/
 #perry.url=https://web.dev.cwds.io/
 #login.form.target.url=https://web.dev.cwds.io/perry/login
+
+###preint
+#api.url=https://cansapi.preint.cwds.io/
+#perry.url=https://web.preint.cwds.io/
+#login.form.target.url=https://web.preint.cwds.io/perry/login
