--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ project.ext {
     projectDockerAppName = 'cans-api'
     mainClass = 'gov.ca.cwds.cans.CansApplication'
     projectMajorVersion = '0.10.1'
-    dataModelVersion = '0.10.1-SNAPSHOT'
+    dataModelVersion = '0.10.1_682-RC'
     coreApiVersion = '1.9.4_868-RC'
     apiSecurityVersion = '4.0.0_1010-RC'
     dropwizardVersion = '1.1.0'
