--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ project.ext {
     mainClass = 'gov.ca.cwds.cans.CansApplication'
     projectMajorVersion = '0.10.1'
     dataModelVersion = '0.10.1_688-RC'
-    coreApiVersion = '1.9.4_871-RC'
+    coreApiVersion = '1.10.1-SNAPSHOT'
     apiSecurityVersion = '4.0.0_1010-RC'
     dropwizardVersion = '1.1.0'
     mapstructVersion = '1.2.0.Final'
@@ -116,6 +116,7 @@ configurations.all {
 dependencies {
     compile group: 'gov.ca.cwds.cals', name: 'cans-ns-data-model', version: dataModelVersion, changing: true
     compile group: 'gov.ca.cwds.api', name: 'legacy-data-access', version: coreApiVersion
+    compile group: 'gov.ca.cwds.api', name: 'api-core-cms', version: coreApiVersion
     compile group: 'gov.ca.cwds.api', name: 'api-core-rest', version: coreApiVersion
     compile group: 'gov.ca.cwds.api', name: 'api-security', version: apiSecurityVersion
     compile group: 'gov.ca.cwds.api', name: 'drools-engine', version: coreApiVersion
