--- a/src/test/resources/config/cans-api.yml
+++ b/src/test/resources/config/cans-api.yml
@@ -43,6 +43,7 @@ cansDataSourceFactory:
       hibernate.default_schema: cans
       hibernate.id.new_generator_mappings: false
       hibernate.show_sql: true
+      org.hibernate.envers.store_data_at_delete: true
 
 cmsDataSourceFactory:
   driverClass: org.h2.Driver
