--- a/src/test/resources/config/cans-api.yml
+++ b/src/test/resources/config/cans-api.yml
@@ -98,7 +98,7 @@ logging:
   level: ${LOGLEVEL:-INFO}
   loggers:
     "org.hibernate.SQL":
-      level: INFO
+      level: DEBUG
     "org.hibernate.type.descriptor.sql":
       level: DEBUG
     "AUDIT":
