Revert base docker image for cans-api-tests image

--- a/docker-tests/Dockerfile
+++ b/docker-tests/Dockerfile
@@ -1,10 +1,10 @@
-FROM cwds/alpinejre
+FROM cwds/javajdk
 
 # Performance tests
-RUN apk add curl
+RUN yum -y install curl
 RUN curl https://chromedriver.storage.googleapis.com/2.41/chromedriver_linux64.zip -o /usr/local/bin/chromedriver
 RUN chmod +x /usr/local/bin/chromedriver
-RUN apk add wget
+RUN yum -y install wget
 RUN cd /opt/ \
     && wget https://archive.apache.org/dist/jmeter/binaries/apache-jmeter-4.0.tgz \
     && tar -xvzf apache-jmeter-4.0.tgz \
