--- a/config/cans-api.yml
+++ b/config/cans-api.yml
@@ -68,13 +68,14 @@ cmsDataSourceFactory:
   logValidationErrors: true
   initialSize: 0
   minSize: 0
-  maxSize: ${DB_CMS_CP_MAX_SIZE:-8}
+  maxSize: ${DB_CMS_CP_MAX_SIZE:-20}
   minIdleTime: 1 minute
   properties:
     hibernate.dialect: org.hibernate.dialect.DB2Dialect
     hibernate.show_sql: false
     hibernate.default_schema: ${DB_CMS_SCHEMA:-CWSINT}
     hibernate.connection.autocommit: false
+    hibernate.connection.isolation: 1
 
 cmsRsDataSourceFactory:
   autoCommitByDefault: false
@@ -86,13 +87,14 @@ cmsRsDataSourceFactory:
   logValidationErrors: true
   initialSize: 0
   minSize: 0
-  maxSize: ${DB_CMS_RS_CP_MAX_SIZE:-8}
+  maxSize: ${DB_CMS_RS_CP_MAX_SIZE:-20}
   minIdleTime: 1 minute
   properties:
     hibernate.dialect: org.hibernate.dialect.DB2Dialect
     hibernate.show_sql: false
     hibernate.default_schema: ${DB_CMS_RS_SCHEMA:-CWSRS1}
     hibernate.connection.autocommit: false
+    hibernate.connection.isolation: 1
 
 upgradeCansDbOnStart: ${UPGRADE_CANS_DB_ON_START:-true}
 populateDemoDataOnStart: ${POPULATE_DEMO_DATA_ON_START:-true}
