Log pattern fixed to have unique identifiers for each request

--- a/config/cans-api.yml
+++ b/config/cans-api.yml
@@ -129,4 +129,5 @@ logging:
       threshold: DEBUG
       timeZone: UTC
       target: stdout
-      logFormat: '[%X{remoteAddress}] [%date{ISO8601}] [%level] [%thread] [%X{uniqueId}] [%logger:] [%message]%n'
+      logFormat: '[%X{REMOTE_ADDRESS}] [%date{ISO8601}] [%X{USER_ID}] [%X{UNIQUE_ID}] [%level] [%thread] [%logger]: [%message]%n'
+
