--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,10 @@ project.ext {
     mapstructVersion = '1.2.0.Final'
     lombokVersion = '1.16.18'
 
+    isRelease = System.getProperty("Release") == "true"
     buildNumber = System.getProperty('BuildNumber')
-    projectVersion = System.getProperty('newVersion')
+    newVersion = System.getProperty('newVersion')
+    projectVersion = (newVersion && newVersion != '') ? newVersion : '0.11_' + buildNumber + '-SNAPSHOT'
     dockerTag = projectVersion
 
     // assumed that Windows users use the Docker Toolbox
@@ -51,7 +53,6 @@ project.ext {
     // Publishing configuration
     snapshotMavenRepo = "http://sonar.dev.cwds.io:8081/artifactory/repo"
     releaseMavenRepo = "http://sonar.dev.cwds.io:8081/artifactory/libs-release"
-    isRelease = System.getProperty("Release") == "true"
     artifactoryRepo = (isRelease ? releaseMavenRepo : snapshotMavenRepo)
 }
 
